# VideoCutView

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/colin/videocutview/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpegFrameCreator.cpp  logger.cpp
app/src/main/java/com/colin/videocutview/: ChooseCoverBar.kt  MainActivity.kt  MyRecyclerView.kt  NativeFrameCreator.kt  TestAdapter.kt  TextureVideoView.java  Util.kt  VideoCutLayout.kt  VideoCutView.kt
app/src/main/res/drawable/: ic_video_control.xml  ic_video_control_right.xml  shape_bord_theme_2.xml  shape_video_cut_progress_line.xml
app/src/main/res/layout/: activity_main.xml  item_test.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/colin/videocutview/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
